add skills + contact

--- a/css/style.css
+++ b/css/style.css
@@ -43,15 +43,15 @@ body{
 
 section{
     min-height: 100vh;
-    padding:1rem;
+    padding:0.5rem;
 }
 
 .btn{
-    padding:.7rem 3rem;
+    padding:.7rem 5rem;
     background:#333;
     color:#fff;
     cursor: pointer;
-    margin-top: 1rem;
+    margin-top: 5rem;
     font-size: 2rem;
     border-radius: 5rem;
 }
@@ -145,36 +145,7 @@ header .navbar ul li a:hover{
     z-index: 1000;
     display: none;
 }
-@media (max-width:1200px){
 
-    html{
-        font-size: 55%;
-    }
-
-    .home{
-        padding:1rem 4rem;
-    }
-
-}
-
-@media (max-width:991px){
-
-   header{
-       left:-120%;
-   }
-
-   #menu{
-       display: block;
-   }
-   header.toggle{
-    left:0%;
-   }
-
-   body{
-       padding:0;
-   }
-
-}
 .home{
     display: flex;
     justify-content: center;
@@ -201,35 +172,15 @@ header .navbar ul li a:hover{
     color:#eee;
     padding: 1rem 0;
 }
-@media (max-width:1200px){
 
-    html{
-        font-size: 55%;
-    }
 
-    .home{
-        padding:1rem 4rem;
-    }
 
-}
-
-@media (max-width:991px){
-
-   header{
-       left:-120%;
-   }
-
-   #menu{
-       display: block;
-   }
-
-}
 .about .row{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding:1rem 0;
+    padding:10rem 0;
 }
 
 .about .row .info{
@@ -274,6 +225,133 @@ header .navbar ul li a:hover{
     font-size: 2rem;
     color:#fff;
 }
+
+
+
+*{
+    resize: none;
+    border: none;
+    outline: none;
+    text-decoration: none;
+    list-style-type: none;
+    color: rgb(170, 196, 58);
+ 
+
+    
+}
+#tagcloud {
+ right: -170px;
+}
+.contact .row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.contact .row .content{
+    flex:1 1 30rem;
+    padding:4rem;
+    padding-bottom: 0;
+}
+
+.contact .row form{
+    flex:1 1 45rem;
+    padding:2rem;
+    margin:2rem;
+    margin-bottom: 4rem;
+}
+
+.contact .row form .box{
+    padding:1.5rem;
+    margin:1rem 0;
+    background:#3333;
+    color:#fff;
+    text-transform: none;
+    font-size: 1.7rem;
+    width:100%;
+}
+
+.contact .row form .box::placeholder{
+    text-transform: capitalize;
+}
+
+.contact .row form .message{
+    height: 15rem;
+    resize: none;
+}
+
+.contact .row .content .title{
+    text-transform: uppercase;
+    color:#fff;
+    font-size: 3rem;
+    padding-bottom: 2rem;
+}
+
+.contact .row .content .info h3{
+    display: flex;
+    align-items: center;
+    font-size: 2rem;
+    color:#eee;
+    padding:1rem 0;
+    font-weight: normal;
+}
+
+.contact .row .content .info h3 i{
+    padding-right: 1rem;
+    color:var(--yellow);
+}
+
+.top{
+    position: fixed;
+    bottom:7.5rem; right: 2rem;
+    z-index: 100;
+    display: none;
+}
+
+
+
+
+@media (max-width:1200px){
+
+    html{
+        font-size: 55%;
+    }
+
+    .home{
+        padding:1rem 4rem;
+    }
+
+}
+
+@media (max-width:991px){
+
+   header{
+       left:-120%;
+   }
+
+   #menu{
+       display: block;
+   }
+
+   header.toggle{
+    left:0%;
+   }
+
+   body{
+       padding:0;
+   }
+
+}
+
+@media (max-width:768px){
+
+    html{
+        font-size: 50%;
+    }
+ 
+ }
+
 @media (max-width:400px){
 
     header{
@@ -288,7 +366,16 @@ header .navbar ul li a:hover{
         width: 100%;
     }
  
-  
+    .skills .box-container .box{
+        width:100%;
+    }
+
+    .skills .box-container .box{
+        width:100%;
+    }
+
+    .contact .row form{
+        margin:3rem 0;
+    }
 
  }
-
