--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,16 @@
     outline: none; border:none;
     text-transform: capitalize;
     transition: all .2s linear;
+    
+  
+   
 }
 
 *::selection{
     background:var(--yellow);
     color:#333;
+  
+ 
 }
 
 html{
@@ -54,6 +59,7 @@ section{
     margin-top: 5rem;
     font-size: 2rem;
     border-radius: 5rem;
+    
 }
 
 .btn i{
@@ -225,7 +231,41 @@ header .navbar ul li a:hover{
     font-size: 2rem;
     color:#fff;
 }
+.about .box-container{
+   
 
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding:8rem 2rem;
+;
+}
+
+.about .box-container .box{
+    height: 26rem;
+    width:30rem;
+    border-radius: 3rem;
+    margin:1rem;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.about .box-container .box img{
+    height:100%;
+    width:100%;
+    object-fit: cover;
+}
+
+.about .box-container .box:hover img{
+    transform: scale(1.2);
+}
+.about .box-container .box h1{
+    padding-right: 1rem;
+    color:var(--yellow);
+
+}
 
 
 *{
@@ -256,13 +296,16 @@ header .navbar ul li a:hover{
 }
 
 .contact .row form{
+
     flex:1 1 45rem;
     padding:2rem;
     margin:2rem;
     margin-bottom: 4rem;
+    padding-top: 15rem;
 }
 
 .contact .row form .box{
+ 
     padding:1.5rem;
     margin:1rem 0;
     background:#3333;
